restructure project src directory

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,11 +22,19 @@ message(STATUS "Started CMake for ${PROJECT_NAME} v${PROJECT_VERSION}...\n")
 
 find_package(GTest CONFIG REQUIRED)
 
-add_library(${PROJECT_NAME}_LIB module.c)
+list(APPEND ${PROJECT_NAME}_LIB_SOURCES
+        src/module.c
+        )
+
+add_library(${PROJECT_NAME}_LIB ${${PROJECT_NAME}_LIB_SOURCES})
 target_include_directories(${PROJECT_NAME}_LIB PUBLIC .)
 
+list(APPEND ${PROJECT_NAME}_SOURCES
+        src/main.cc
+        )
+
 if(${PROJECT_NAME}_BUILD_EXECUTABLE)
-    add_executable(${PROJECT_NAME} main.cc)
+    add_executable(${PROJECT_NAME} ${${PROJECT_NAME}_SOURCES})
     target_link_libraries(${PROJECT_NAME} ${PROJECT_NAME}_LIB)
 endif()
 
