feature: update conan

--- a/{{ cookiecutter.project_slug }}/CMakeLists.txt
+++ b/{{ cookiecutter.project_slug }}/CMakeLists.txt
@@ -13,38 +13,34 @@ list(APPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake)
 
 # Dependency
 
-include(cmake/DefaultSettings.cmake)
-include(cmake/StaticAnalyzers.cmake)
-include(cmake/Conan.cmake)
-include(cmake/Vcpkg.cmake)
-include(cmake/Doxygen.cmake)
+include(cmake/settings.cmake)
+include(cmake/vcpkg.cmake)
+include(cmake/doxygen.cmake)
 
 message(STATUS "Started CMake for ${PROJECT_NAME} v${PROJECT_VERSION}...\n")
 
-find_package(GTest CONFIG REQUIRED)
-
 list(APPEND ${PROJECT_NAME}_LIB_SOURCES
         src/module.c
-        )
+)
 
 add_library(${PROJECT_NAME}_LIB ${${PROJECT_NAME}_LIB_SOURCES})
 target_include_directories(${PROJECT_NAME}_LIB PUBLIC .)
 
 list(APPEND ${PROJECT_NAME}_SOURCES
         src/main.cc
-        )
+)
 
-if(${PROJECT_NAME}_BUILD_EXECUTABLE)
+if (${PROJECT_NAME}_BUILD_EXECUTABLE)
     add_executable(${PROJECT_NAME} ${${PROJECT_NAME}_SOURCES})
     target_link_libraries(${PROJECT_NAME} ${PROJECT_NAME}_LIB)
-endif()
+endif ()
 
 # Test
-if(${PROJECT_NAME}_ENABLE_UNIT_TESTING)
+if (${PROJECT_NAME}_ENABLE_UNIT_TESTING)
     enable_testing()
     message(STATUS "Build unit tests for the project. Tests should always be found in the test folder\n")
     add_subdirectory(test)
-endif()
+endif ()
 
 # INSTALL
 if (${PROJECT_NAME}_INSTALL)
@@ -53,8 +49,16 @@ endif ()
 
 # PACK
 if (${PROJECT_NAME}_PACK)
-    set(CPACK_GENERATOR WIX) # Windows GUI pack
-    #    set(CPACK_GENERATOR "ZIP") # Compressor Pack
-    include(CPACK)
+    if (UNIX)
+        message("current platform: Linux ")
+        set(CPACK_GENERATOR "ZIP")
+    elseif (WIN32)
+        message("current platform: Windows ")
+        set(CPACK_GENERATOR WIX) # Windows GUI pack installer
+    else ()
+        message("current platform: Unknown ")
+        set(CPACK_GENERATOR "ZIP")
+    endif ()
+    include(CPack)
 endif ()
 
